<?xml version="1.0"?>
<package format="2">
  <name>ackermann_drive_publisher</name>
  <version>0.0.0</version>
  <description>The ackermann_drive_publisher package</description>
  <maintainer email="TODO@gmail.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>  
  <build_export_depend>dynamic_reconfigure</build_export_depend>
</package>